--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,4 +6,4 @@ $medium-color: #b0a8b9;
 $dark-color: #4b4453;
 $highlight-color: #00c0a3;
 $other-color: #00896f;
-$bg-image: url("/dist/img/showcase.jpg");
+$bg-image: url("../img/header.jpg");
