--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@
 body {
 	font-family: zeitung, sans-serif;
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 200;
 	line-height: 1.6;
 	background-color: white;
 }
@@ -27,6 +27,7 @@ h2,
 h3,
 h4 {
 	text-transform: uppercase;
+	font-weight: 600;
 }
 
 img {
@@ -95,4 +96,52 @@ img {
 	}
 
 	// * Header Inner
+}
+
+// * Home Sections
+#home {
+	&-a {
+		.specials {
+			margin-top: 3rem;
+			display: grid;
+			grid-gap: 1rem;
+			grid-template-columns: repeat(4, 1fr);
+
+			.fas {
+				color: $main-color;
+				padding-bottom: 0.4rem;
+			}
+		}
+	}
+
+	&-b {
+		.stats {
+			display: grid;
+			grid-template-columns: repeat(4, 1fr);
+
+			li {
+				line-height: 2;
+
+				&.stats-title {
+					font-size: 1.5rem;
+				}
+
+				&.stats-number {
+					font-size: 2rem;
+					font-weight: 600;
+				}
+			}
+
+			div {
+				padding: 3rem 0;
+
+				&:nth-child(odd) {
+					background: $light-color;
+				}
+				&:nth-child(even) {
+					background: $medium-color;
+				}
+			}
+		}
+	}
 }
