--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -79,3 +79,19 @@ input[class^="btn-"]:hover {
 		margin: 4rem 0rem;
 	}
 }
+
+.section-title {
+	font-size: 2rem;
+	display: block;
+	padding-bottom: 0.5rem;
+	text-align: center;
+	font-weight: 300;
+}
+
+.bottom-line {
+	height: 3px;
+	width: 30%;
+	background: $main-color;
+	display: block;
+	margin: 0 auto 0 auto;
+}
