--- a/scss/main.scss
+++ b/scss/main.scss
@@ -156,7 +156,7 @@ img {
 				position: absolute;
 				top: 0;
 				right: 0;
-				font-size: 28px;
+				font-size: 24px;
 				background: $main-color;
 				border-radius: 50%;
 				height: 15px;
@@ -164,6 +164,8 @@ img {
 				line-height: 15px;
 				padding: 1rem;
 				transition: all 1s;
+				font-family: zeitung, sans-serif;
+				font-weight: 400;
 			}
 
 			&-icon {
@@ -188,6 +190,35 @@ img {
 						background: $dark-color;
 					}
 				}
+			}
+		}
+	}
+}
+
+// * Footer
+#main-footer {
+	background: $dark-color;
+	color: #fff;
+	height: 5rem;
+
+	.footer-content {
+		display: flex;
+		justify-content: space-between;
+		height: 5rem;
+		align-items: center;
+
+		.social .fab {
+			margin-right: 1rem;
+			border: 2px #fff solid;
+			border-radius: 50%;
+			height: 20px;
+			width: 20px;
+			line-height: 20px;
+			text-align: center;
+			padding: 0.5rem;
+			transition: all 0.5s;
+			&:hover {
+				background: $main-color;
 			}
 		}
 	}
